networkpolicies/client.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    app: client
spec:
  containers:
    - name: cont1
      image: nginx
      ports:
        - containerPort: 80
