networkpolicies/swiggy.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: swiggy
  labels:
    app: swiggy
spec:
  containers:
    - name: cont1
      image: nginx
      ports:
        - containerPort: 80
