networkpolicies/zomato.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: zomato
  labels:
    app: zomato
spec:
  containers:
    - name: cont1
      image: nginx
      ports:
        - containerPort: 80
