networkpolicies/allow-client-to-swiggy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-swiggy
  namespace: swiggy
spec:
  podSelector:
    matchLabels:
      app: swiggy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: client
      podSelector:
        matchLabels:
          app: client
