networkpolicies/allow-swiggy-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-swiggy-egress-to-client
  namespace: swiggy
spec:
  podSelector:
    matchLabels:
      app: swiggy
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: client
      podSelector:
        matchLabels:
          app: client
