networkpolicies/allow-swiggy-to-client.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-swiggy-to-client
  namespace: client
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: swiggy
      podSelector:
        matchLabels:
          app: swiggy
